# quintic-ou

./: README.md  black.py  checks.ipynb  pyproject.toml  quintic.ipynb  quintic.py  quintic_base.py  quintic_ou.ipynb  utils.py
shaun/: notebook_Quintic.ipynb  quintic_OU_Fourier_methods.ipynb
